// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PercentageCard /> should style values correctly 1`] = `
<span
  class="text-[46px] font-bold text-red"
>
  0
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 2`] = `
<span
  class="text-[46px] font-bold text-green"
>
  50
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 3`] = `
<span
  class="text-[46px] font-bold text-green"
>
  100
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 4`] = `
<span
  class="text-[46px] font-bold text-green"
>
  1000
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 5`] = `
<span
  class="text-[46px] font-bold text-red"
>
  0.1
  %
</span>
`;

exports[`<PercentageCard /> should style values correctly 6`] = `
<span
  class="text-[46px] font-bold text-red"
>
  49.9999
  %
</span>
`;
